sfdx/force-app/main/default/objects/Bank_Account__c/fields/Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Name__c</fullName>
    <label>Bank Account Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>