sfdx/force-app/main/default/objects/Bank_Account__c/fields/Minimum_Balance__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Balance__c</fullName>
    <label>Minimum Balance</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>