sfdx/force-app/main/default/objects/Bank_Account__c/fields/Primary_Account_Holder__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account_Holder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Account Holder</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bank_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>