sfdx/force-app/main/default/objects/Bank_Account__c/fields/Secondary_Account_Holder__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Account_Holder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Account Holder</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bank_Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>